fix java preview in gradle