@@ -50,6 +50,10 @@ subprojects {
         options.compilerArgs += '--enable-preview'
     }
 
+    tasks.withType(JavaExec) {
+        jvmArgs += "--enable-preview"
+    }
+
     tasks.withType(Test) {
         jvmArgs += "--enable-preview"
     }
